changed the logo of angular

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Explore and discover a wide range of video games. Find your next adventure with G.A.M.E">
   <meta name="keywords" content="games, video games, explore games, G.A.M.E, gaming">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://cdn2.vectorstock.com/i/1000x1000/87/06/video-game-shop-theme-logo-template-vector-19858706.jpg">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
 </head>
